# termgui

./: Cargo.toml  LICENSE  README.md
src/: color.rs  lib.rs  macros.rs  windows.rs
src/terminal/: mod.rs  ncurses.rs  winapi.rs  windows.rs
src/windows/: mod.rs
